🔨 Update config.json

--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
-    "token": "tokenhere",
-    "owners": ["ownerid"],
-    "PREFIX": "prefix",
-    "color": "black",
-    "cooldown": 5 
+    "token": "tokenhere", // Your discord bot token goes here
+    "owners": ["ownerid"], // Your ID goes here
+    "PREFIX": "prefix", // Your prefix goes here
+    "color": "black", // Color
+    "cooldown": 5 // Cooldown (change cooldown in ms at command file [default 5s])
 }
