--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
         "node": "15.3.0"
     },
     "author": "Madnesssik",
-    "license": "ISC",
+    "license": "MIT",
     "dependencies": {
         "common-tags": "^1.8.0",
         "discord-logs": "^1.9.0",
